 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

--------------------------------------------------------------------------------
Changes for 1.8.5rc1

 - [ZBX-3446] fixed possible hang of pollers - added timeout handler for external scripts (Sasha)
 - [ZBX-3461] fixed names of IPMI pollers in debug output and the number of items they take (asaveljevs)
 - [ZBX-3100] fixed messages in popup when no proxies or discovery checks defined (Vedmak)
 - [ZBX-3138] fixed bug when disabling application, webitems were disabled too (Vedmak)
 - [ZBX-2951] made interval hidden for trapper items (Vedmak)
 - [ZBX-2867] changed order of "Discovery" and "IT services" in configuration menu (Vemdak)
 - [ZBX-3047] fixed zapcat compatibility for trigger expressions (Aly,Sasha,asaveljevs)
 - [ZBX-2912] added check for valid UTF-8 characters in the incoming data (Sasha)
 - [ZBX-1346] add more user parameter examples (Richlv)
 - [ZBX-2922] changed log level from warning to debug for some messages (Sasha)
 - [ZBX-3440] Added pagination to slide and discovery configuration (KB)
 - [ZBX-3433] fixed removing deleted passive proxies from queue (Sasha)
 - [ZBX-416] fixed PostgreSQL errors in configuration sender module when using DM setup (Sasha)
 - [ZBX-3346] fixed items being polled more frequently than necessary (Sasha)
 - [ZBX-3409] fixed semaphore and shared memory access permissions (Sasha)
 - [ZBX-3173] made server-side JSON parser ignore whitespace better (asaveljevs)
 - [ZBX-3425] updated Brazilian Portuguese translation; thanks to Murilo Moreira de Oliveira (Richlv)
 - [ZBX-3403] fixed SQL statements for auto registration and discovery operations (Sasha)
 - [ZBX-3403] removed UNIQUE constraint for autoreg_host_1 index (Sasha)