@@ -77,6 +77,7 @@ New features:
 --------------------------------------------------------------------------------
 Changes for 1.8.5rc1
 
+ - [ZBX-3457] in triggers Wizard, add more that 26 symbols with symbols dublicate (Vlad)
  - [ZBX-3446] fixed possible hang of pollers - added timeout handler for external scripts (Sasha)
  - [ZBX-3461] fixed names of IPMI pollers in debug output and the number of items they take (asaveljevs)
  - [ZBX-3100] fixed messages in popup when no proxies or discovery checks defined (Vedmak)
